--- a/prpr-client/Cargo.toml
+++ b/prpr-client/Cargo.toml
@@ -26,13 +26,13 @@ md5 = "0.7"
 
 once_cell = "1.17.1"
 
-openssl = { version = "0.10.57", features = ["vendored"] }
 
 pollster = "0.2.5"
 prpr = { path = "../prpr" }
 regex = "1.7.0"
 
-reqwest = { version = "0.11.18", features = ["stream"] }
+reqwest = { version = "0.11.18", default-features = false, features = ["stream", "rustls-tls"] }
+
 
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
@@ -47,9 +47,6 @@ uuid7 = "0.3.4"
 ndk-sys = "0.2"
 ndk-context = "0.1"
 sasa = { git = "https://github.com/Mivik/sasa", default-features = false, features = ["oboe"] }
-
-[target.'cfg(not(target_os = "android"))'.dependencies]
-sasa = { git = "https://github.com/Mivik/sasa" }
 
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "*"
