--- a/prpr/Cargo.toml
+++ b/prpr/Cargo.toml
@@ -66,7 +66,7 @@ ndk-context = "0.1"
 sasa = { git = "https://github.com/Mivik/sasa", default-features = false, features = ["oboe"] }
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
-sasa = { git = "https://github.com/Mivik/sasa" }
+sasa = { git = "https://github.com/Mivik/sasa", default-features = false }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1.23", features = ["rt-multi-thread", "fs"] }
